[package]
name = "serde_yaml_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# Change to 0.8 for success
serde_yaml="0.9"
strum = { version = "0.24", features = ["derive"] }